--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   build:
-    name: Build
+    name: Build and Test
     runs-on: macos-latest
     steps:
     - name: Checkout Code
