--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on: push
 jobs:
   build:
     name: Build and Test
-    runs-on: macos-latest
+    runs-on: macos-15
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
